--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,6 @@
+the.old.man.s01e03.1080p.web.h264-plzproper
+loot.s01e01.1080p.web.h264-ggez
+loot.s01e02.1080p.web.h264-glhf
 The Yorkshire Vet - S14E09
 Superman and Lois - S02E14
 Obi-Wan.Kenobi.S01E06.1080p.WEB.h264-KOGi
