--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,4 @@
+loot.s01e03.1080p.web.h264-ggez.mkv_clean
 the.old.man.s01e03.1080p.web.h264-plzproper.mkv_clean
 loot.s01e03.1080p.web.h264-ggez
 loot.s01e01.1080p.web.h264-ggez.mkv_clean
