--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,35 @@
+Obi Wan Kenobi S01E01 1080p WEB h264 KOGi
+Obi Wan Kenobi S01E02 1080p WEB h264 KOGi
+Deadliest Catch S18E07 720p WEB h264 BAE
+Superman And Lois S02E12 1080p WEB h264 GOSSIP
+Obi Wan Kenobi S01E03 720p WEB h264 KOGi
+Star Trek Strange New Worlds S01E05 1080p WEB H264 CAKES
+Tehran S02E06 720p WEB H264 GLHF
+Deadliest Catch S18E08 720p WEB h264 BAE
+Superman And Lois S02E13 1080p WEB h264 GOSSIP
+Obi Wan Kenobi S01E04 720p WEB h264 KOGi
+Star Trek Strange New Worlds S01E06 720p WEB h264 KOGi
+For All Mankind S03E01 720p WEB H264 GGEZ
+Tehran S02E07 720p WEB H264 GGEZ
+Deadliest Catch S18E09 720p WEB h264 BAE
+Obi Wan Kenobi S01E05 720p WEB h264 KOGi
+Tehran S02E08 1080p WEB H264 GLHF
+Star Trek Strange New Worlds S01E07 1080p WEB H264 GLHF
+For All Mankind S03E02 720p WEB H264 GGEZ
+Ms Marvel S01E01 1080p WEB h264 KOGi
+Ms Marvel S01E02 1080p WEB h264 KOGi
+Deadliest Catch S18E10 720p WEB h264 BAE
+Superman And Lois S02E14 1080p WEB h264 GOSSIP
+Obi Wan Kenobi S01E06 720p WEB h264 KOGi
+Ms Marvel S01E03 1080p WEB h264 KOGi
+Star Trek Strange New Worlds S01E08 1080p WEB H264 GLHF
+For All Mankind S03E03 720p WEB H264 GGEZ
+Only Murders in the Building S02E02 720p WEB H264 CAKES
+Only Murders in the Building S02E01 720p WEB H264 CAKES
+Deadliest Catch S18E11 1080p DSCP WEBRip AAC2 0 x264 WhiteHat
+The Old Man S01E02 II 720p AMZN WEBRip DDP5 1 x264 NTb
+The Old Man S01E01 I 720p AMZN WEBRip DDP5 1 x264 NTb
+The Old Man S01E03 III 720p AMZN WEBRip DDP5 1 x264 NTb
 loot.s01e03.1080p.web.h264-ggez.mkv_clean
 the.old.man.s01e03.1080p.web.h264-plzproper.mkv_clean
 loot.s01e03.1080p.web.h264-ggez
