--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,4 @@
+The Yorkshire Vet S14E10 1080p HDTV H264-DARKFLiX
 Obi Wan Kenobi S01E01 1080p WEB h264 KOGi
 Obi Wan Kenobi S01E02 1080p WEB h264 KOGi
 Deadliest Catch S18E07 720p WEB h264 BAE
