--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,32 @@
+Obi Wan Kenobi S01E05 720p WEB h264 KOGi
+Tehran S02E08 1080p WEB H264 GLHF
+Star Trek Strange New Worlds S01E07 1080p WEB H264 GLHF
+For All Mankind S03E02 720p WEB H264 GGEZ
+Ms Marvel S01E01 1080p WEB h264 KOGi
+Ms Marvel S01E02 1080p WEB h264 KOGi
+Obi Wan Kenobi S01E06 720p WEB h264 KOGi
+Ms Marvel S01E03 1080p WEB h264 KOGi
+Star Trek Strange New Worlds S01E08 1080p WEB H264 GLHF
+For All Mankind S03E03 720p WEB H264 GGEZ
+Only Murders in the Building S02E02 720p WEB H264 CAKES
+Only Murders in the Building S02E01 720p WEB H264 CAKES
+The Old Man S01E02 II 720p AMZN WEBRip DDP5 1 x264 NTb
+The Old Man S01E01 I 720p AMZN WEBRip DDP5 1 x264 NTb
+The Old Man S01E03 III 720p AMZN WEBRip DDP5 1 x264 NTb
+Ms Marvel S01E04 1080p WEB h264 KOGi
+Star Trek Strange New Worlds S01E09 720p WEB h264 KOGi
+For All Mankind S03E04 1080p WEB H264 GGEZ
+The Old Man S01E04 720p WEB h264 GOSSIP
+Only Murders in the Building S02E03 720p WEB h264 KOGi
+Ms Marvel S01E05 720p WEB h264 KOGi
+Star Trek Strange New Worlds S01E10 720p WEB H264 GLHF
+For All Mankind S03E05 1080p WEB H264 GGEZ
+The Old Man S01E05 V 720p AMZN WEBRip DDP5 1 x264 NTb
+Better Call Saul S06E08 720p WEB H264 GLHF
+Only Murders in the Building S02E04 720p WEB H264 CAKES
+Ms Marvel S01E06 720p WEB h264 KOGi
+For All Mankind S03E06 720p WEB H264 GLHF
+The Old Man S01E06 720p WEB h264 GOSSIP
 [Yameii] Kaguya-sama wa Kokurasetai - Ultra Romantic - 12 | Kaguya-sama - Love Is War -Ultra Romantic- [English Dub] [WEB-DL 1080p] [0D459C59]
 [Yameii] Kaguya-sama wa Kokurasetai - Ultra Romantic - 13 | Kaguya-sama - Love Is War -Ultra Romantic- [English Dub] [WEB-DL 1080p] [025C768D]
 Obi Wan Kenobi S01E05 720p WEB h264 KOGi
