--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,11 @@
+Kaguya-sama wa Kokurasetai - Tensai-tachi no Renai Zunousen - S03E06 - DUAL 1080p WEB x264 -NanDesuKa (CR).mkv (Japanese, English Dubs)
+Kaguya-sama wa Kokurasetai - Tensai-tachi no Renai Zunousen - S03E07 - MULTi 1080p WEB x264 -NanDesuKa (CR).mkv (Japanese, English, Spanish Dubs)
+Kaguya-sama wa Kokurasetai - S03E11 - 1080p WEB H.264 -NanDesuKa (FUNi).mkv
+Kaguya-sama wa Kokurasetai - Tensai-tachi no Renai Zunousen - S03E08 - MULTi 1080p WEB x264 -NanDesuKa (CR).mkv (Japanese, Portuguese, English Dubs)
+Kaguya-sama wa Kokurasetai - Tensai-tachi no Renai Zunousen - S03E09 - DUAL 1080p WEB x264 -NanDesuKa (CR).mkv (Japanese, English Dubs)
+Kaguya-sama wa Kokurasetai - S03E13 - 1080p WEB H.264 -NanDesuKa (FUNi).mkv
+Kaguya-sama wa Kokurasetai - S03E12 - 1080p WEB H.264 -NanDesuKa (FUNi).mkv
+Kaguya-sama wa Kokurasetai - Tensai-tachi no Renai Zunousen - S03E10 - DUAL 1080p WEB x264 -NanDesuKa (CR).mkv (Japanese, English Dubs)
 Obi Wan Kenobi S01E05 720p WEB h264 KOGi
 Tehran S02E08 1080p WEB H264 GLHF
 Star Trek Strange New Worlds S01E07 1080p WEB H264 GLHF
