--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,6 @@
+[Anime Chap] Lycoris Recoil S01E01 [WEB 1080p] - Episode 1
+[Anime Chap] Lycoris Recoil S01E02 [WEB 1080p] {ED Lyrics} - Episode 2
+[Anime Chap] Lycoris Recoil S01E03 [WEB 1080p] {OP & ED Lyrics} - Episode 3
 Kaguya-sama wa Kokurasetai - Tensai-tachi no Renai Zunousen - S03E06 - DUAL 1080p WEB x264 -NanDesuKa (CR).mkv (Japanese, English Dubs)
 Kaguya-sama wa Kokurasetai - Tensai-tachi no Renai Zunousen - S03E07 - MULTi 1080p WEB x264 -NanDesuKa (CR).mkv (Japanese, English, Spanish Dubs)
 Kaguya-sama wa Kokurasetai - S03E11 - 1080p WEB H.264 -NanDesuKa (FUNi).mkv
