--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,4 @@
+Better Call Saul S06E09 720p WEB H264 GLHF
 [Vodes] Made in Abyss - S02E02 [WEB 1080p HEVC]
 [Anime Chap] Lycoris Recoil S01E01 [WEB 1080p] - Episode 1
 [Anime Chap] Lycoris Recoil S01E02 [WEB 1080p] {ED Lyrics} - Episode 2
