--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,5 @@
+Virgin River S04E05 1080p WEB H264-CAKES
+Virgin River S04E10 1080p WEB H264-PECULATE
 Only Murders in the Building S02E05 720p WEB H264 GGEZ
 Better Call Saul S06E09 720p WEB H264 GLHF
 [Vodes] Made in Abyss - S02E02 [WEB 1080p HEVC]
