--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,4 @@
+Made In Abyss The Golden City of the Scorching Sun S02E03 1080p WEB H264-SUGOI
 Virgin River S04E05 1080p WEB H264-CAKES
 Virgin River S04E10 1080p WEB H264-PECULATE
 Only Murders in the Building S02E05 720p WEB H264 GGEZ
